sumo/tests/traci/Scenario/DomRoadMap/InvalidVariableId/testclient.prog
simstep 1 1
scenario_novalue 0 0 0 254 0
simstep 2 1